--- a/public/css/stylesheet.css
+++ b/public/css/stylesheet.css
@@ -1,5 +1,29 @@
-div.container-cadastro{
-	position: relative;
-	left: 20%;
-	width: 60%;
+.tt-menu {
+	width: 100%;
+	border: 1px solid #bbb;
+	border-top: 0;
+	padding: 0;
+	background-color: white;
+}
+
+.tt-suggestion{
+	padding: 5px 10px;
+	margin: 0;
+	cursor: pointer;
+}
+
+.twitter-typeahead{
+	width: 100%;
+}
+
+.tt-suggestion p{
+	margin: 5px 0;
+}
+
+.tt-hint{
+	color: #bbb;
+}
+
+.tt-suggestion:hover {
+	background-color: #5897fb;
 }
