--- a/public/css/stylesheet.css
+++ b/public/css/stylesheet.css
@@ -1,29 +1,3 @@
-.tt-menu {
-	width: 100%;
-	border: 1px solid #bbb;
-	border-top: 0;
-	padding: 0;
-	background-color: white;
-}
-
-.tt-suggestion{
-	padding: 5px 10px;
-	margin: 0;
-	cursor: pointer;
-}
-
-.twitter-typeahead{
-	width: 100%;
-}
-
-.tt-suggestion p{
-	margin: 5px 0;
-}
-
-.tt-hint{
-	color: #bbb;
-}
-
-.tt-suggestion:hover {
-	background-color: #5897fb;
+body{
+	font-family: Arial;
 }
