Adiciona opcao de incluir imagens para jogos e adiciona pesquisa para listas e jogos

--- a/public/css/jogos.css
+++ b/public/css/jogos.css
@@ -9,7 +9,6 @@
 	margin-top: 8px;
 	word-wrap: break-word;
 	font-weight: bold;
-	font-size: inherit;
 }
 .listaJogos{
 	display: inline-block;
@@ -41,6 +40,7 @@
 	padding: 9px;
 }
 
-.thumbnail{
+.jogos .thumbnail{
 	background-color: white;
+	min-width: 105px;	
 }
